@@ -1,5 +1,13 @@
 2007-11-06  Kohei Yoshida  <kyoshida@novell.com>
 
+	* source/inc/numeric/cellfuncobj.hxx: include "unoglobal.hxx" to resolve
+	the issue with macro define 'sun'.
+	
+	* source/inc/unoglobal.hxx: include <sal/config.h> header to deal with
+	silly macro define 'sun' with Sun Studio compiler. 
+
+2007-11-06  Kohei Yoshida  <kyoshida@novell.com>
+
 	* source/inc/numeric/lpbase.hxx:
 	* source/inc/numeric/lpmodel.hxx:
 	* source/numeric/lpbase.cxx:
